--- a/NEW PORTFOLIO/index.html
+++ b/NEW PORTFOLIO/index.html
@@ -44,6 +44,10 @@ canvas {
 		display: inline-block;
 		background-color: greenyellow;
 		text-align: center;
+		 -moz-user-select: none; /* Firefox */
+		 -webkit-user-select: none; /* Chrome, Safari, Opéra depuis la version 15 */
+		 -ms-user-select: none; /* Internet explorer depuis la version 10 et Edge */
+		 user-select: none; /* Propriété standard */
 	}
 </style>
 </head>
