--- a/NEW PORTFOLIO/index.html
+++ b/NEW PORTFOLIO/index.html
@@ -36,6 +36,7 @@ canvas {
 		background-color: rgba(23,23,23,1.00);
 		border-top: solid 15px black;
 		z-index: 100;
+		touch-action: manipulation;
 	}
 	.button{
 		font-size : 40px;
@@ -48,6 +49,7 @@ canvas {
 		 -webkit-user-select: none; /* Chrome, Safari, Opéra depuis la version 15 */
 		 -ms-user-select: none; /* Internet explorer depuis la version 10 et Edge */
 		 user-select: none; /* Propriété standard */
+		touch-action: manipulation;
 	}
 </style>
 </head>
