--- a/artprojet2/page4.html
+++ b/artprojet2/page4.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Titre de la page</title>
   <link rel="stylesheet" href="style.css">
-  <script>var arraySelect = 4;</script>
+  <script> arraySelect = 4;</script>
 </head>
 <body>
 
