--- a/artprojet2/affichageAll.html
+++ b/artprojet2/affichageAll.html
@@ -8,7 +8,7 @@
 <body>
 
 
-
+<div id="conteanire">
 <table id="1">
 	<tbody>
 	<tr>
@@ -321,7 +321,7 @@
 	<tbody>
 </table>
 
-<table id="4">
+<table id="4" style="margin-top : -3px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
@@ -425,7 +425,7 @@
 	<tbody>
 </table>
 
-<table id="5">
+<table id="5" style="margin-top : -3px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
@@ -529,7 +529,7 @@
 	<tbody>
 </table>
 
-<table id="6">
+<table id="6" style="margin-top : -3px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
@@ -633,7 +633,7 @@
 	<tbody>
 </table>
 
-<table id="7">
+<table id="7" style="margin-top : -3px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
@@ -737,7 +737,7 @@
 	<tbody>
 </table>
 
-<table id="8">
+<table id="8" style="margin-top : -3px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
@@ -841,7 +841,7 @@
 	<tbody>
 </table>
 
-<table id="9">
+<table id="9" style="margin-top : -3px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
@@ -944,6 +944,8 @@
 	</tr>
 	<tbody>
 </table>
+
+</div>
 </body>
   <script src="script2.js"></script>
 </html>
