--- a/artprojet2/761986.html
+++ b/artprojet2/761986.html
@@ -28,7 +28,7 @@
   </div>
 
 <table class="demo">
-	<caption>Table</caption>
+	<caption>Touche une case blanche de ton choix</caption>
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
