--- a/artprojet2/9869869.html
+++ b/artprojet2/9869869.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Titre de la page</title>
+  <title>l'ART C'EST COOLe</title>
   <link rel="stylesheet" href="style.css">
   <script> arraySelect = 2;</script>
 </head>
