--- a/artprojet2/affichageAll.html
+++ b/artprojet2/affichageAll.html
@@ -113,7 +113,7 @@
 	<tbody>
 </table>
 
-<table id="2">
+<table id="2" style="margin-left : -3px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
@@ -217,7 +217,7 @@
 	<tbody>
 </table>
 
-<table id="3">
+<table id="3" style="margin-left : -6px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
@@ -425,7 +425,7 @@
 	<tbody>
 </table>
 
-<table id="5" style="margin-top : -3px">
+<table id="5" style="margin-top : -3px ;margin-left : -3px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
@@ -529,7 +529,7 @@
 	<tbody>
 </table>
 
-<table id="6" style="margin-top : -3px">
+<table id="6" style="margin-top : -3px;margin-left : -6px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
@@ -737,7 +737,7 @@
 	<tbody>
 </table>
 
-<table id="8" style="margin-top : -3px">
+<table id="8" style="margin-top : -3px;margin-left : -3px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
@@ -841,7 +841,7 @@
 	<tbody>
 </table>
 
-<table id="9" style="margin-top : -3px">
+<table id="9" style="margin-top : -3px;margin-left : -6px">
 	<tbody>
 	<tr>
 		<td>&nbsp;</td>
