--- a/artprojet2/affichageAll.html
+++ b/artprojet2/affichageAll.html
@@ -946,7 +946,7 @@
 </table>
 
 </div>
-<h1>Vu de tout les QR codes combinés</h1>
+<h1>Vu de tous les QR codes combinés</h1>
 <a href="affichageAllAnimation.html">Voir l'évolution cases par cases (avec une super animation trop coooool)</a>
 </body>
   <script src="script2.js"></script>
