--- a/AFFICHES/index.html
+++ b/AFFICHES/index.html
@@ -6,12 +6,18 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@500&display=swap" rel="stylesheet">
-
+<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js'></script>
+<script type='text/javascript' src='loadImg.js'></script>
+<script type='text/javascript'>
+    $(function(){
+        $('img').imgPreload()
+    })
+</script>
 </head>
 <body>
   <div id="ENGRAND">
       <div id="close" onclick="closeImg()"></div>
-    	<img id="imageToChange" src="\POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 1.png" />
+    	<img id="imageToChange" src="null.png" />
   </div>
   <div class="wrapper">
 
@@ -21,43 +27,43 @@
 
   		<figure class="card">
 
-  			<img src="\POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 1.png" />
+  			<img src="POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 1.png" />
 
   		</figure>
 
   		<figure class="card">
 
-  			<img src="\POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 2.png" />
+  			<img src="POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 2.png" />
 
   		</figure>
 
   		<figure class="card">
 
-  			<img src="\POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 3.png" />
+  			<img src="POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 3.png" />
 
   		</figure>
 
   		<figure class="card">
 
-  			<img src="\POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 4.png" />
+  			<img src="POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 4.png" />
 
   		</figure>
 
       <figure class="card">
 
-  			<img src="\POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 5.png" />
+  			<img src="POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 5.png" />
 
   		</figure>
 
       <figure class="card">
 
-  			<img src="\POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 6.png" />
+  			<img src="POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 6.png" />
 
   		</figure>
 
       <figure class="card">
 
-  			<img src="\POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 7.png" />
+  			<img src="POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 7.png" />
 
   		</figure>
 
@@ -69,31 +75,31 @@
 
       <figure class="card">
 
-        <img src="\POSTERS\BEASTARS\BEASTARS 1.png" />
+        <img src="POSTERS\BEASTARS\BEASTARS 1.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\BEASTARS\BEASTARS 2.png" />
+        <img src="POSTERS\BEASTARS\BEASTARS 2.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\BEASTARS\BEASTARS 3.png" />
+        <img src="POSTERS\BEASTARS\BEASTARS 3.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\BEASTARS\BEASTARS 4.png" />
+        <img src="POSTERS\BEASTARS\BEASTARS 4.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\BEASTARS\BEASTARS 5.png" />
+        <img src="POSTERS\BEASTARS\BEASTARS 5.png" />
 
       </figure>
 
@@ -105,25 +111,25 @@
 
       <figure class="card">
 
-        <img src="\POSTERS\BOOGIEPOP AND OTHERS\BOOGIEPOP AND OTHERS 1.png" />
+        <img src="POSTERS\BOOGIEPOP AND OTHERS\BOOGIEPOP AND OTHERS 1.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\BOOGIEPOP AND OTHERS\BOOGIEPOP AND OTHERS 2.png" />
+        <img src="POSTERS\BOOGIEPOP AND OTHERS\BOOGIEPOP AND OTHERS 2.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\BOOGIEPOP AND OTHERS\BOOGIEPOP AND OTHERS 3.png" />
+        <img src="POSTERS\BOOGIEPOP AND OTHERS\BOOGIEPOP AND OTHERS 3.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\BOOGIEPOP AND OTHERS\BOOGIEPOP AND OTHERS 4.png" />
+        <img src="POSTERS\BOOGIEPOP AND OTHERS\BOOGIEPOP AND OTHERS 4.png" />
 
       </figure>
 
@@ -135,25 +141,25 @@
 
       <figure class="card">
 
-        <img src="\POSTERS\DEATH NOTE\DEATH NOTE 1.png" />
+        <img src="POSTERS\DEATH NOTE\DEATH NOTE 1.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEATH NOTE\DEATH NOTE 2.png" />
+        <img src="POSTERS\DEATH NOTE\DEATH NOTE 2.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEATH NOTE\DEATH NOTE 3.png" />
+        <img src="POSTERS\DEATH NOTE\DEATH NOTE 3.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEATH NOTE\DEATH NOTE 4.png" />
+        <img src="POSTERS\DEATH NOTE\DEATH NOTE 4.png" />
 
       </figure>
 
@@ -165,61 +171,61 @@
 
       <figure class="card">
 
-        <img src="\POSTERS\DEMON SLAYER\DEMON SLAYER 1.png" />
+        <img src="POSTERS\DEMON SLAYER\DEMON SLAYER 1.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEMON SLAYER\DEMON SLAYER 2.png" />
+        <img src="POSTERS\DEMON SLAYER\DEMON SLAYER 2.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEMON SLAYER\DEMON SLAYER 3.png" />
+        <img src="POSTERS\DEMON SLAYER\DEMON SLAYER 3.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEMON SLAYER\DEMON SLAYER 4.png" />
+        <img src="POSTERS\DEMON SLAYER\DEMON SLAYER 4.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEMON SLAYER\DEMON SLAYER 5.png" />
+        <img src="POSTERS\DEMON SLAYER\DEMON SLAYER 5.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEMON SLAYER\DEMON SLAYER 6.png" />
+        <img src="POSTERS\DEMON SLAYER\DEMON SLAYER 6.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEMON SLAYER\DEMON SLAYER 7.png" />
+        <img src="POSTERS\DEMON SLAYER\DEMON SLAYER 7.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEMON SLAYER\DEMON SLAYER 8.png" />
+        <img src="POSTERS\DEMON SLAYER\DEMON SLAYER 8.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEMON SLAYER\DEMON SLAYER 9.png" />
+        <img src="POSTERS\DEMON SLAYER\DEMON SLAYER 9.png" />
 
       </figure>
 
       <figure class="card">
 
-        <img src="\POSTERS\DEMON SLAYER\DEMON SLAYER 10.png" />
+        <img src="POSTERS\DEMON SLAYER\DEMON SLAYER 10.png" />
 
       </figure>
 
@@ -230,25 +236,25 @@
 
         <figure class="card">
 
-          <img src="\POSTERS\ERASED\ERASED 1.png" />
+          <img src="POSTERS\ERASED\ERASED 1.png" />
 
         </figure>
 
         <figure class="card">
 
-          <img src="\POSTERS\ERASED\ERASED 2.png" />
+          <img src="POSTERS\ERASED\ERASED 2.png" />
 
         </figure>
 
         <figure class="card">
 
-          <img src="\POSTERS\ERASED\ERASED 3.png" />
+          <img src="POSTERS\ERASED\ERASED 3.png" />
 
         </figure>
 
         <figure class="card">
 
-          <img src="\POSTERS\ERASED\ERASED 4.png" />
+          <img src="POSTERS\ERASED\ERASED 4.png" />
 
         </figure>
 
@@ -260,13 +266,13 @@
 
         <figure class="card">
 
-          <img src="\POSTERS\FIRE FORCE\FIRE FORCE 1.png" />
+          <img src="POSTERS\FIRE FORCE\FIRE FORCE 1.png" />
 
         </figure>
 
         <figure class="card">
 
-          <img src="\POSTERS\FIRE FORCE\FIRE FORCE 2.png" />
+          <img src="POSTERS\FIRE FORCE\FIRE FORCE 2.png" />
 
         </figure>
 
@@ -484,6 +490,198 @@
         <figure class="card">
 
           <img src="POSTERS\PRINCESS MONONOKE\PRINCESS MONONOKE 4.png" />
+
+        </figure>
+      </div>
+      <h2><strong>RADIANT<span>( 9 )</span></strong></h2>
+
+      <div class="cards">
+
+        <figure class="card">
+
+          <img src="POSTERS\RADIANT\RADIANT 1.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\RADIANT\RADIANT 2.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\RADIANT\RADIANT 3.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\RADIANT\RADIANT 4.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\RADIANT\RADIANT 5.png" />
+
+        </figure>
+        <figure class="card">
+
+          <img src="POSTERS\RADIANT\RADIANT 6.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\RADIANT\RADIANT 7.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\RADIANT\RADIANT 8.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\RADIANT\RADIANT 9.png" />
+
+        </figure>
+      </div>
+      <h2><strong>SWORD ART ONLINE<span>( 4 )</span></strong></h2>
+
+      <div class="cards">
+
+        <figure class="card">
+
+          <img src="POSTERS\SWORD ART ONLINE\SWORD ART ONLINE 1.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\SWORD ART ONLINE\SWORD ART ONLINE 2.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\SWORD ART ONLINE\SWORD ART ONLINE 3.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\SWORD ART ONLINE\SWORD ART ONLINE 4.png" />
+
+        </figure>
+      </div>
+      <h2><strong>THE PROMISED NEVERLAND<span>( 5 )</span></strong></h2>
+
+      <div class="cards">
+
+        <figure class="card">
+
+          <img src="POSTERS\THE PROMISED NEVERLAND\THE PROMISED NEVERLAND 1.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\THE PROMISED NEVERLAND\THE PROMISED NEVERLAND 2.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\THE PROMISED NEVERLAND\THE PROMISED NEVERLAND 3.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\THE PROMISED NEVERLAND\THE PROMISED NEVERLAND 4.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\THE PROMISED NEVERLAND\THE PROMISED NEVERLAND 5.png" />
+
+        </figure>
+      </div>
+      <h2><strong>WEATHERING WITH YOU<span>( 6 )</span></strong></h2>
+
+      <div class="cards">
+
+        <figure class="card">
+
+          <img src="POSTERS\Weathering With You\Weathering With You 1.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\Weathering With You\Weathering With You 2.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\Weathering With You\Weathering With You 3.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\Weathering With You\Weathering With You 4.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\Weathering With You\Weathering With You 5.png" />
+
+        </figure>
+        <figure class="card">
+
+          <img src="POSTERS\Weathering With You\Weathering With You 6.png" />
+
+        </figure>
+      </div>
+      <h2><strong>YOUR NAME<span>( 5 )</span></strong></h2>
+
+      <div class="cards">
+
+        <figure class="card">
+
+          <img src="POSTERS\YOUR NAME\YOUR NAME 1.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\YOUR NAME\YOUR NAME 2.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\YOUR NAME\YOUR NAME 3.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\YOUR NAME\YOUR NAME 4.png" />
+
+        </figure>
+
+        <figure class="card">
+
+          <img src="POSTERS\YOUR NAME\YOUR NAME 5.png" />
 
         </figure>
       </div>
