--- a/AFFICHES/index.html
+++ b/AFFICHES/index.html
@@ -17,7 +17,7 @@
 <body>
   <div id="ENGRAND">
       <div id="close" onclick="closeImg()"></div>
-    	<img id="imageToChange" src="null.png" />
+    	<img id="imageToChange" src="nulle.png" />
   </div>
   <div class="wrapper">
 
@@ -27,7 +27,7 @@
 
   		<figure class="card">
 
-  			<img src="POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 1.png" />
+  			<img  src="POSTERS\ATTAQUE DES TITANS\ATTAQUE DES TITANS 1.png" />
 
   		</figure>
 
