--- a/AFFICHES/index.html
+++ b/AFFICHES/index.html
@@ -18,6 +18,7 @@
   <div id="ENGRAND">
       <div id="close" onclick="closeImg()"></div>
     	<img id="imageToChange" src="nulle.png" />
+      <img style="opacity:0" src="spinner.gif" />
   </div>
   <div class="wrapper">
 
