--- a/Projects/index.html
+++ b/Projects/index.html
@@ -11,6 +11,7 @@
 
   </head>
   <body>
+    <div id="moins">
     <h1 id="title">MOI</h1>
     <div class="items">
     		<div class="item active">
@@ -42,7 +43,9 @@
     			<div class="button"><i class="fas fa-angle-right"></i></div>
     		</div>
     	</div>
-    <h1 id="PLUS">PLUS</h1>
+    </div>
+    <h1 id="PLUS" onclick="plus()">PLUS</h1>
+    <div id="more"><h1>HELLOOOO WORLD</h1></div>
     <script src="script.js"></script>
   </body>
   </html>
