--- a/Projects/index.html
+++ b/Projects/index.html
@@ -45,13 +45,13 @@
           <img src="images/screen.jpg">
         </div>
         <div class="item"><!-- CODE WARS -->
-          <img src="images/codewars.png">
+          <img src="images/logoCodewars.PNG">
         </div>
         <div class="item"><!-- GITHUB -->
           <img src="images/githubLogo.png">
         </div>
         <div class="item"><!-- AFTER EFFECT -->
-          <img src="images/AfterEffectLogo.png">
+          <img src="images/afterEffectLogo.png">
         </div>
         <div class="item prev"><!-- MINI POSTERS https://isaacmenard.github.io/AFFICHES/ -->
           <img src="images/ATTAQUE DES TITANS 5.png">
